[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools" ]

[project]
name = "gluestick"
version = "0.0.0"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "scikit_learn",
    "seaborn",
    "omegaconf~=2.2",
    "opencv-python~=4.7",
    "torch>=1.12",
    "torchvision>=0.13",
    "setuptools",
    "tqdm",
    "pytlsd @ git+https://github.com/iago-suarez/pytlsd.git@37ac583",
]

[tool.setuptools.packages.find]
include = [ "gluestick", "gluestick.*" ]
